recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:7: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src other2
      ^SplitHanoi1:8: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move src dst
      ^SplitHanoi1:9: error: missing arguments for method move in class HanoiEntity;
follow this method with `_' if you want to treat it as a partially applied function
      move other2 dst
      ^SplitHanoi1:13: error: not enough arguments for method moveInter: (height: Int, src: Int, other1: Int, other2: Int, dst: Int)Unit.
Unspecified value parameters src, other1, other2, ...
      moveInter (n - 1) src dst other1 other2
                ^