recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.code
def moveInter(height:Int, src:Int, other1:Int, other2:Int, dst:Int) {
  
  height match {
    
    case 1 => {
      move src other2
      move src dst
      move other2 dst
    }

    case n => {
      moveInter (n - 1) src dst other1 other2
      
    }
  }
}

def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
  }